[package]
name = "jls-test"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0 OR ISC OR MIT"
description = "jls-test"
publish = false

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true }
env_logger.workspace = true
fxhash = { workspace = true }
itertools = { workspace = true }
log.workspace = true
logging = "0.1.0"
rayon = { workspace = true }
rcgen.workspace = true
rustls = { package = "rustls-jls", path = "../rustls-jls", features = ["aws_lc_rs"] }
rustls_raw = { package = "rustls",git = "https://github.com/rustls/rustls",tag="v/0.23.25", features = ["aws_lc_rs"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true }
